# vv6

./: CMakeLists.txt
.github/workflows/: ci.yml
include/vv6/: func_view.hpp  shared_func.hpp  unique_func.hpp
test/: CMakeLists.txt  main.cpp
